--- a/.classpath
+++ b/.classpath
@@ -5,5 +5,6 @@
 	<classpathentry kind="lib" path="/home/dead/workspace/projetCPS/lib/jinput.jar"/>
 	<classpathentry kind="lib" path="/home/dead/workspace/projetCPS/lib/lwjgl.jar"/>
 	<classpathentry kind="lib" path="/home/dead/workspace/projetCPS/lib/slick.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
