--- a/build.xml
+++ b/build.xml
@@ -1,77 +1,82 @@
-<project name="dataflow" default="compile" basedir=".">
-    <description>
-        The build file for the Project example/
-    </description>
-  <!-- set global properties for this build -->
-  <property name="src" location="src"/>
-  <property name="bin" location="bin"/>
+<project name="ProjetCPS" default="compile" basedir="."> 
+	<description> StreetFighter </description> 
+	<!-- set global properties for this build --> 
+	<property name="src" location="src"/> 
+	<property name="build" location="build"/>
+	<property name="native" location="lib/natives"/>
 
-  <!-- METTRE ICI LE NOM DU BINOME -->
-  <property name="nom1" value="PONTI"/>
-  <property name="nom2" value="SERRES/ROBINI"/>
-
-  <target name="init">
-    <!-- Create the time stamp -->
-    <tstamp/>
-    <!-- Create the build directory structure used by compile -->
-    <mkdir dir="${bin}"/>
-  </target>
-
-  <target name="compile" depends="init"
-        description="compile the source " >
-    <!-- Compile the java code from ${src} into ${build} -->
-    <javac debug="true" srcdir="${src}" excludes="" destdir="${bin}" includeantruntime="false" />
-  </target>
-
-  <target name="run" depends="compile"
-          description="run examples">
-    <echo>================ Example 1 : GenConst ================</echo>
-    <java classname="dataflow.examples.basics.ShowOnes"
-          classpath="${bin}">
-       <arg value="30"/>
-    </java>
-    <echo>================ Example 2 : GenInt ================</echo>
-    <java classname="dataflow.examples.basics.ShowFirstIntegers"
-          classpath="${bin}">
-       <arg value="30"/>
-    </java>
-    <echo>================ Example 3 : GenInt composite ================</echo>
-    <java classname="dataflow.examples.basics.ShowFirstIntegersComposite"
-          classpath="${bin}">
-       <arg value="30"/>
-    </java>
-    <echo>================ Example 4 : GenFact ================</echo>
-    <java classname="dataflow.examples.fact.ShowFact"
-          classpath="${bin}">
-       <arg value="10"/>
-    </java>
-    <echo>================ Example 5 : GenFibo ================</echo>
-    <java classname="dataflow.examples.fibo.ShowFibo"
-          classpath="${bin}">
-       <arg value="20"/>
-    </java>
-    <echo>================ Example 6 : GenPrimes ================</echo>
-    <java classname="dataflow.examples.primes.ShowPrimes"
-          classpath="${bin}">
-       <arg value="30"/>
-    </java>
-  </target>
-
-  <target name="dist" depends="init,clean"
-        description="Generate distribution distribution" >
-    <!-- tout mettre dans l'archive -->
-    <jar basedir="." jarfile="../Project-StreetFighter-${nom1}-${nom2}-${DSTAMP}.jar"/>
-  </target>
-
-  <target name="clean"
-        description="clean up" >	
-	<echo>================ Removing temporary files... ================</echo>
-        <delete verbose="true"> <!-- Remove all *~ files -->
-	   <fileset dir="${basedir}" defaultexcludes="no">
-             <include name="**/*~"/>
-           </fileset>
-        </delete>
-        <echo>================ Removing build directory ================</echo>    
-	<delete dir="${bin}"/>
-  </target>
+	 	<property name="nom1" value="PONTI"/>
+	  <property name="nom2" value="ROBINI"/>
+	
+	<target name="init"> 
+		<!-- Create the time stamp --> 
+		<tstamp/> 
+		<!-- Create the build directory structure used by compile --> 
+		<mkdir dir="${build}"/> 
+	</target> 
+	<target name="compile" depends="init" description="compile the source " > 
+		<!-- Compile the java code from ${src} into ${build} 
+		<javac debug="true" srcdir="${src}" excludes="" destdir="${build}" includeantruntime="false">--> 
+		<java classname="streetfighter.main.Main" classpath="${build}" fork="true"> 
+		
+		<classpath>
+		        <pathelement path="./jars/junit.jar"/>
+				<pathelement path="./lib/ibxm.jar"/>
+			  	<pathelement path="./lib/jinput.jar"/>
+			  	<pathelement path="./lib/jnlp.jar"/>
+			  	<pathelement path="./lib/jogg-0.0.7.jar"/>
+			  	<pathelement path="./lib/jorbis-0.0.15.jar"/>
+			  	<pathelement path="./lib/lwjgl.jar"/>
+			  	<pathelement path="./lib/lwjgl_util.jar"/>
+			  	<pathelement path="./lib/lwjgl_util_applet.jar"/>
+			  	<pathelement path="./lib/natives-linux.jar"/>
+			  	<pathelement path="./lib/natives-mac.jar"/>
+			  	<pathelement path="./lib/natives-windows.jar"/>
+			  	<pathelement path="./lib/slick.jar"/>
+			  	<pathelement path="./lib/tinylinepp.jar"/>
+		    </classpath>
+		    <jvmarg line="-Djava.library.path=lib/natives"/>
+		</java>
+	</target> 
+	
+	<target name="run" depends="compile" description="run application in release mode"> 
+		<echo>================ Run Object Main ================</echo> 
+		<java classname="streetfighter.main.Main" classpath="${build}" fork="true"> 
+			<classpath>
+					        <pathelement path="./jars/junit.jar"/>
+							<pathelement path="./lib/ibxm.jar"/>
+						  	<pathelement path="./lib/jinput.jar"/>
+						  	<pathelement path="./lib/jnlp.jar"/>
+						  	<pathelement path="./lib/jogg-0.0.7.jar"/>
+						  	<pathelement path="./lib/jorbis-0.0.15.jar"/>
+						  	<pathelement path="./lib/lwjgl.jar"/>
+						  	<pathelement path="./lib/lwjgl_util.jar"/>
+						  	<pathelement path="./lib/lwjgl_util_applet.jar"/>
+						  	<pathelement path="./lib/natives-linux.jar"/>
+						  	<pathelement path="./lib/natives-mac.jar"/>
+						  	<pathelement path="./lib/natives-windows.jar"/>
+						  	<pathelement path="./lib/slick.jar"/>
+						  	<pathelement path="./lib/tinylinepp.jar"/>
+			</classpath>
+			<jvmarg line="-Djava.library.path=lib/natives"/>
+		</java> 
+	</target>
+	
+	<target name="dist" depends="init,clean"
+	        description="Generate distribution distribution" >
+	    <!-- tout mettre dans l'archive -->
+	    <jar basedir="." jarfile="../Project-StreetFighter-${nom1}-${nom2}-${DSTAMP}.jar"/>
+	  </target>
+	
+	<target name="clean" description="clean up" >
+		<echo>================ Removing temporary files... ================</echo> 
+		<delete verbose="true"> 
+		<!-- Remove all ~ files -->
+        <fileset dir="${basedir}" defaultexcludes="no">
+             <include name="**/~"/> 
+             </fileset> 
+             </delete> 
+             <echo>================ Removing bin directory ================</echo>
+		<delete dir="${bin}"/> 
+	</target> 
 </project>
