--- a/build.xml
+++ b/build.xml
@@ -3,10 +3,11 @@
 	<!-- set global properties for this build --> 
 	<property name="src" location="src"/> 
 	<property name="build" location="build"/>
-	<property name="native" location="lib/natives"/>
+	<property name="jars" location="jars"/>
+	<property name="natives" location="lib/natives"/>
 
-	 	<property name="nom1" value="PONTI"/>
-	  <property name="nom2" value="ROBINI"/>
+	<property name="nom1" value="PONTI"/>
+	<property name="nom2" value="ROBINI"/>
 	
 	<target name="init"> 
 		<!-- Create the time stamp --> 
@@ -15,10 +16,8 @@
 		<mkdir dir="${build}"/> 
 	</target> 
 	<target name="compile" depends="init" description="compile the source " > 
-		<!-- Compile the java code from ${src} into ${build} 
-		<javac debug="true" srcdir="${src}" excludes="" destdir="${build}" includeantruntime="false">--> 
-		<java classname="streetfighter.main.Main" classpath="${build}" fork="true"> 
-		
+		<!-- Compile the java code from ${src} into ${build} --> 
+		<javac debug="true" srcdir="${src}" excludes="" destdir="${build}" includeantruntime="false">
 		<classpath>
 		        <pathelement path="./jars/junit.jar"/>
 				<pathelement path="./lib/ibxm.jar"/>
@@ -35,8 +34,7 @@
 			  	<pathelement path="./lib/slick.jar"/>
 			  	<pathelement path="./lib/tinylinepp.jar"/>
 		    </classpath>
-		    <jvmarg line="-Djava.library.path=lib/natives"/>
-		</java>
+		</javac>
 	</target> 
 	
 	<target name="run" depends="compile" description="run application in release mode"> 
@@ -66,6 +64,39 @@
 	        description="Generate distribution distribution" >
 	    <!-- tout mettre dans l'archive -->
 	    <jar basedir="." jarfile="../Project-StreetFighter-${nom1}-${nom2}-${DSTAMP}.jar"/>
+	  </target>
+	
+	 <target name="test" depends="compile"
+	          description="test of the implementation">
+	    <echo>================ Run first test ================</echo>
+	    <junit printsummary="yes">
+	      <classpath>
+	        <pathelement location="${build}"/>
+	      	<pathelement path="./jars/junit.jar"/>
+	      								<pathelement path="./lib/ibxm.jar"/>
+	      							  	<pathelement path="./lib/jinput.jar"/>
+	      							  	<pathelement path="./lib/jnlp.jar"/>
+	      							  	<pathelement path="./lib/jogg-0.0.7.jar"/>
+	      							  	<pathelement path="./lib/jorbis-0.0.15.jar"/>
+	      							  	<pathelement path="./lib/lwjgl.jar"/>
+	      							  	<pathelement path="./lib/lwjgl_util.jar"/>
+	      							  	<pathelement path="./lib/lwjgl_util_applet.jar"/>
+	      							  	<pathelement path="./lib/natives-linux.jar"/>
+	      							  	<pathelement path="./lib/natives-mac.jar"/>
+	      							  	<pathelement path="./lib/natives-windows.jar"/>
+	      							  	<pathelement path="./lib/slick.jar"/>
+	      							  	<pathelement path="./lib/tinylinepp.jar"/>
+	      </classpath>
+
+	      <formatter type="plain"/>
+
+	      <test name="streetfighter.test.CharacterTest" outfile="reportCharacter"/>
+	      <test name="streetfighter.test.EngineTest" outfile="reportEngine"/>
+	      <test name="streetfighter.test.FightCharTest" outfile="reportFightChar"/>
+	      <test name="streetfighter.test.HitboxRectTest" outfile="reportHitboxRect"/>
+	      <test name="streetfighter.test.PlayerTest" outfile="reportPlayer"/>
+
+	    </junit>
 	  </target>
 	
 	<target name="clean" description="clean up" >
